# pg-kinetic

./: .dockerignore  .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  index.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: compatibility.yml  container.yml  docs.yml  helm.yml  linux-tests.yml  regression.yml  release-contract.yml  release.yml  stable-gate.yml
bench/: compose.yml
bench/baselines/: README.md  prepared.json  simple-query.json  transaction-pool.json
bench/pg-kinetic/: auth-users.txt
bench/pgbench/: basic.sql
bench/pgbouncer/: pgbouncer.ini
bench/pgdog/: pgdog.toml  users.toml
bench/postgres/: init.sql
bench/scenarios/: benchmark-basic.toml  benchmark-extended-query.toml  benchmark-idle-clients.toml  benchmark-prepared.toml  benchmark-routing-sharding-policy.toml  benchmark-simple-query.toml  benchmark-transaction-pool.toml
charts/: README.md  cr.yaml
charts/pg-kinetic/: Chart.yaml  values.yaml
compat/: README.md
compat/c/: Makefile  compat.c  run.sh
compat/common/: contract.toml  expected-results.json  schema.sql  seed.sql
compat/cpp/: CMakeLists.txt  main.cpp  run.sh
compat/dotnet/: PgKinetic.Compatibility.csproj  Program.cs  run.sh
compat/go/: go.mod  main.go  run.sh
compat/go-pgx/: go.mod  go.sum  main.go
compat/java/: build.gradle.kts  run.sh
compat/javascript/: package.json  run.sh  smoke.mjs
compat/node-pg/: package-lock.json  package.json  smoke.js
compat/python/: requirements.txt  run.sh  smoke.py
compat/python-psycopg/: smoke.py
compat/rust/: Cargo.toml  run.sh
compat/rust-tokio-postgres/: Cargo.toml
compat/rust/src/: main.rs
crates/pg-kinetic/: Cargo.toml
crates/pg-kinetic-core/: Cargo.toml
crates/pg-kinetic-core/src/: adaptive.rs  admin.rs  backpressure.rs  benchmark.rs  cleanup.rs  compatibility.rs  constants.rs  control.rs  ha.rs  lib.rs  lsn.rs  mirror.rs  observability.rs  performance.rs  pin.rs  policy.rs  policy_rule.rs  prepare.rs  recovery.rs  regression.rs  route.rs  routing.rs  runtime.rs  secrets.rs  security.rs  session.rs  shard_extract.rs  sharding.rs  sql.rs  sql_classify.rs  virtual_session.rs
crates/pg-kinetic-core/tests/: admin_parser.rs  admin_types.rs  core_constants.rs  routing_types.rs  scram_secrets.rs  security_modes.rs  sql_analysis.rs
crates/pg-kinetic-proxy/: Cargo.toml
crates/pg-kinetic-proxy/src/: adaptive.rs  admin.rs  auth.rs  backend.rs  backend_query.rs  benchmark.rs  buffers.rs  cancel.rs  compatibility.rs  config.rs  control.rs  drain.rs  health.rs  io_runtime.rs  io_uring.rs  io_uring_transport.rs  lib.rs  lifecycle.rs  metrics.rs  mirror.rs  pause.rs  policy.rs  policy_wasm.rs  pool.rs  preflight.rs  profile.rs  proxy.rs  regression.rs  reload.rs  routing.rs  runtime_engine.rs  sharding.rs  snapshot.rs  socket.rs  telemetry.rs  tls.rs
crates/pg-kinetic-proxy/src/proxy/: backend_startup.rs  buffer_limit.rs  checkout.rs  client_io.rs  client_session.rs  connection.rs  forwarding.rs  recovery.rs  request_plan.rs  session_snapshot.rs
crates/pg-kinetic-splice/: Cargo.toml
crates/pg-kinetic-splice-protocol/: Cargo.toml
crates/pg-kinetic-splice/src/: lib.rs  manager.rs
crates/pg-kinetic-wire/: Cargo.toml
crates/pg-kinetic/src/: backend.rs  cleanup.rs  config.rs  lib.rs  main.rs  metrics.rs  pool.rs  prepare.rs  proxy.rs  session.rs  virtual_session.rs
crates/pg-kinetic/src/wire/: backend.rs  error.rs  frame.rs  message.rs  mod.rs  rewrite.rs  startup.rs
crates/pg-kinetic/tests/: adaptive_ops.rs  admin_endpoint.rs  admin_snapshots.rs  auth_query.rs  auth_smoke.rs  backend_credential_rotation.rs  backend_error.rs  backend_failure_recovery.rs  backend_frames.rs  backend_pool.rs  backpressure.rs  benchmark_automation.rs  benchmark_lab.rs  buffer_limits.rs  cancel_request.rs  cleanup_policy.rs  compatibility_contract.rs  compatibility_manifest.rs  compatibility_reports.rs  compatibility_scripts.rs  control_plane.rs  debug_sampling.rs  docs_site.rs  frontend_messages.rs  graceful_drain.rs  health_endpoints.rs  idle_client_scale.rs  io_runtime_planning.rs  io_runtime_response.rs  io_uring_config.rs  io_uring_runtime.rs  linux_smoke_scripts.rs  lsn_freshness.rs  metric_catalog.rs  mirror_traffic.rs  module_layout.rs  multi_pool.rs  observability_overhead.rs  otel_traces.rs  performance_admin_metrics.rs  (+59 more)
crates/pg-kinetic/tests/fixtures/tls/: ca.pem  server-chain.pem  server-key.pem
crates/xtask/: Cargo.toml
deploy/: docker-compose.yml  pg-kinetic.toml
docs/: adaptive-ops.md  admin.md  architecture.md  backend-service-auth.md  backpressure.md  benchmark-results.md  benchmarking.md  commands.md  compatibility.md  configuration.md  deployment-escape-hatches.md  docs-site.md  faq.mdx  health-and-drain.md  how-it-compares.md  index.mdx  installation.md  is-it-ready.md  kubernetes.md  metrics.md  migration.md  mirroring.md  policy.md  prepared-statements.md  production-runtime.md  quickstart.md  read-routing.md  regression.md  release-contract.md  sharding.md  testing.md  tls-and-auth.md  transaction-pooling.md  troubleshooting.md  what-is-pg-kinetic.md
docs-site/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/static/: CNAME  llms.txt  robots.txt
docs/release-notes/: v1.0.0-rc.1.md
regression/: manifest.schema.json  manifest.toml
regression/baselines/: performance-score.sample.json
scripts/bench/: compare-performance.ps1  compare-performance.sh  profile-performance.ps1  profile-performance.sh  run-performance.ps1  run-performance.sh  run-read-only.sh
scripts/compat/: run.ps1  run.sh
scripts/docs/: check-config-coverage.ps1  check-config-coverage.sh  check-config-docs.py  check-links.ps1  check-links.sh
scripts/lib/: admin_wire.py  common.sh
scripts/regression/: run.ps1  run.sh
scripts/release/: assert-contract.sh  assert-rc-notes.sh  run-stable-gates.sh
scripts/smoke/: compat.ps1  compat.sh  mirroring.ps1  (+11 more)
(+28 files in other folders)
