[package]
name = "pg-kinetic-compat-rust"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
diesel = { version = "2", default-features = false, features = ["postgres"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
