[package]
name = "pg-kinetic-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
bytes = "1"
clap = { version = "4", default-features = false, features = ["derive", "std"] }
pg-kinetic-wire = { path = "../pg-kinetic-wire" }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
