[package]
name = "pg-kinetic-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
base64 = "0.22"
bytes = "1"
clap = { version = "4", default-features = false, features = ["derive", "std"] }
getrandom = "0.3"
hmac = "0.13"
pg-kinetic-wire = { path = "../pg-kinetic-wire" }
sha2 = "0.11"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
