[package]
name = "pg-kinetic-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = []
policy-wasm = ["dep:wasmi"]
runtime-experiments = []

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", default-features = false, features = ["derive", "env", "error-context", "help", "std", "usage"] }
hmac = "0.12"
opentelemetry = "0.32"
opentelemetry-otlp = "0.32"
opentelemetry_sdk = "0.32.1"
metrics_crate = { package = "metrics", version = "0.24" }
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
pg-kinetic-core = { path = "../pg-kinetic-core" }
pg-kinetic-wire = { path = "../pg-kinetic-wire" }
sha2 = "0.10"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6.4"
subtle = "2"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tracing-opentelemetry = "0.33"
tracing = "0.1"
wasmi = { version = "1.1.0", default-features = false, features = ["std", "wat"], optional = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["param"] }

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
