[package]
name = "pg-kinetic-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = []
policy-wasm = ["dep:wasmi"]
runtime-experiments = []

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", default-features = false, features = ["derive", "env", "error-context", "help", "std", "usage"] }
hmac = "0.13"
opentelemetry = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace"] }
opentelemetry_sdk = "0.32.1"
metrics_crate = { package = "metrics", version = "0.24" }
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }
pg-kinetic-core = { path = "../pg-kinetic-core" }
pg-kinetic-wire = { path = "../pg-kinetic-wire" }
sha2 = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6.4"
subtle = "2"
thiserror = "2"
toml = "1.1"
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tracing-opentelemetry = "0.33"
tracing = "0.1"
wasmi = { version = "1.1.0", default-features = false, features = ["std", "wat"], optional = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["param"] }

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
