[package]
name = "pg-kinetic-splice"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = []
sockmap-bypass = ["dep:aya"]

[dependencies]
anyhow = "1"
pg-kinetic-splice-protocol = { path = "../pg-kinetic-splice-protocol" }
tokio = { version = "1", default-features = false, features = ["sync", "time"] }
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.14", optional = true }

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
