[package]
name = "pg-kinetic"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = []
policy-wasm = ["pg-kinetic-proxy/policy-wasm"]

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["derive", "env", "error-context", "help", "std", "usage"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pg-kinetic-core = { path = "../pg-kinetic-core" }
pg-kinetic-proxy = { path = "../pg-kinetic-proxy" }
pg-kinetic-wire = { path = "../pg-kinetic-wire" }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
base64 = "0.22"
bytes = "1"
hmac = "0.12"
metrics = "0.24"
pretty_assertions = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio-rustls = "0.26"
toml = "0.8"

[lints]
workspace = true
